[package]
name = "authorizer-mastercard"
version = "0.1.0"
authors = ["Alef Carlos <alef.carlos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

authorization-iso8583 = { path = "../authorization-iso8583" }